# grpc-echo-rs

./: Cargo.toml  README.md  build.rs
k8s/: deployment.yaml  service.yaml
proto/: server.proto  server.rs
src/: lib.rs  log_utils.rs  server.rs  server_grpc.rs
