[package]
name = "grpc-echo-rs"
version = "0.1.0"
authors = ["gong023 <gon.gong.gone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2.8.0"
futures = "0.1.29"
log = "0.4.8"
grpcio = "0.5.0-alpha.4"

[build-dependencies]
grpcio-compiler = "0.5.0-alpha.2"
which = "2.0.1"
