[package]
name = "grpc-echo-rs"
version = "0.1.0"
authors = ["gong023 <gon.gong.gone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2.8.0"
futures = "0.1.29"
log = "0.4.8"
grpcio = { version = "0.4.5", default-features = false, features = ["protobuf-codec"] }
slog = "2.0"
slog-async = "2.1"
slog-stdlog = "3.0"
slog-scope = "4.0"
slog-term = "2.2"

[build-dependencies]
grpcio-compiler = "0.4.3"
which = "2.0.1"
